[project]
name = "coding-dataset-preprocess"
version = "0.1.0"
description = "A Python package for preprocessing coding datasets"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
coding-dataset-preprocess = "coding_dataset_preprocess:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
